@@ -23,10 +23,7 @@ catnr:  03
 #include <vector> 
 
 #include <gnutls/gnutls.h>
-
 #include <spdlog/spdlog.h>
-#include <spdlog/sinks/stdout_color_sinks.h>
-#include "spdlog/sinks/basic_file_sink.h"
 
 #include "Util.h"
 
