@@ -10,8 +10,6 @@ catnr:  03
 #pragma once
 
 #include <spdlog/spdlog.h>
-#include <spdlog/sinks/stdout_color_sinks.h>
-#include "spdlog/sinks/basic_file_sink.h"
 
 #include <tabulate/table.hpp>
 
