@@ -1,16 +1,15 @@
 # uncomment as necessary
 project('bubble', 'cpp',
         license : ['Boost'],
-        version : '0.1',
+        version : '0.0.5',
         default_options : ['cpp_std=c++17', 'warning_level=3', 'werror=false'])
 
 gnutls_dep = dependency('gnutls')
 
 # begin asio: https://think-async.com/Asio/
-add_global_arguments('-I' + get_option('asio_include_dir'), language : 'cpp')
-add_global_arguments('-DASIO_STANDALONE', language : 'cpp')
-add_global_arguments('-DASIO_NO_DEPRECATED', language : 'cpp')
-
+#add_global_arguments('-I' + get_option('asio_include_dir'), language : 'cpp')
+#add_global_arguments('-DASIO_STANDALONE', language : 'cpp')
+#add_global_arguments('-DASIO_NO_DEPRECATED', language : 'cpp')
 # end asio
 
 # CLI11: https://github.com/CLIUtils/CLI11
@@ -20,12 +19,13 @@ add_global_arguments('-I' + get_option('cli11_include_dir'), language : 'cpp')
 add_global_arguments('-I' + get_option('spdlog_include_dir'), language : 'cpp')
 
 # json: https://github.com/nlohmann/json
-#add_global_arguments('-I' + get_option('json_include_dir'), language : 'cpp')
+add_global_arguments('-I' + get_option('json_include_dir'), language : 'cpp')
 
-# add additional include global arguments appropriately!
+# tabluate
+add_global_arguments('-I' + get_option('tabulate_include_dir'), language : 'cpp')
+
 
 # # begin protobuf: https://developers.google.com/protocol-buffers/
-# # protobuf: must be installed independently and has to be found...
 protoc = find_program('protoc', required : true)
 protobuf_dep = dependency('protobuf', required : true)
 
@@ -33,15 +33,10 @@ gen = generator(protoc, \
    output    : ['@BASENAME@.pb.cc', '@BASENAME@.pb.h'],
    arguments : ['--proto_path=@CURRENT_SOURCE_DIR@/src', '--cpp_out=@BUILD_DIR@', '@PLAINNAME@'])
 
-# # change proto file accordingly
 generated = gen.process('src/pop3.proto')
-
-
 # # end protobuf
 
-# subdir('SUBDIR1')
-
-inc_dir = include_directories(['include',
+inc_dir = include_directories([ 'include',
                                 get_option('cli11_include_dir'),
                                 get_option('spdlog_include_dir'),
                                 get_option('json_include_dir'),
@@ -50,7 +45,6 @@ inc_dir = include_directories(['include',
 
 
 src = ['src/main.cpp', 'src/POP3client.cpp', 'src/Util.cpp', 'src/Interactive.cpp', generated]
-#protobuf: src = ['src/main.cpp', generated]
 
 executable('bubble',
            sources : src,
